<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pestisideagri">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fertilizeragri">


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pestpro0"
                    android:layout_width="353dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/toooodo"
                    app:srcCompat="@drawable/pest0" />

                <ImageView
                    android:id="@+id/pestpro1"
                    android:layout_width="353dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/jgjg"
                    app:srcCompat="@drawable/pest1" />

                <ImageView
                    android:id="@+id/pestpro2"
                    android:layout_width="353dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/todoooo"
                    app:srcCompat="@drawable/pest2" />

                <ImageView
                    android:id="@+id/pestpro3"
                    android:layout_width="353dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/jjjj"
                    app:srcCompat="@drawable/pest3" />

                <ImageView
                    android:id="@+id/pestpro4"
                    android:layout_width="353dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/todooooooooo"
                    app:srcCompat="@drawable/pest4" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>